[WARP-SPEED] Support basic index in cache manager
Disabled by default